# oenskeskyen-mcp

./: API_README.md  MCP_INTEGRATION.md  Makefile  README.md  app.py  main.py  mcp_server.py  pyproject.toml  setup_claude_desktop.sh  start_api.py  wishes.txt
.claude/: settings.json
docs/: landing_page.html  second_page.html
scripts/: extract_urls.sh  setup_mcp.sh
src/: api_parser.py  api_reconstruction.py  auth_service.py  browser_automation.py  cache_service.py  graphql_client.py  graphql_queries.py  manual_delete_monitor.py  models.py  network_monitor.py  reconstructed_api_client.py  test_cache.py
tests/: test_auth_service.py  test_browser_automation.py  test_graphql_client.py  test_integration.py
wishes/: Ambulancefly 60465 | City | Officiel LEGO® Shop DK.webloc  Biljagt med politi og muskelbil 60415 | City | Officiel LEGO® Shop DK.webloc  Biltransport med sportsvogne 60408 | City | Officiel LEGO® Shop DK.webloc  Blå monstertruck 60402 | City | Officiel LEGO® Shop DK.webloc  Brandslukningsfly 60413 | City | Officiel LEGO® Shop DK.webloc  Brandstation med brandbil 60414 | City | Officiel LEGO® Shop DK.webloc  Brandvæsnets kommandovogn 60374 | City | Officiel LEGO® Shop DK.webloc  Brandvæsnets redningsbåd 60373 | City | Officiel LEGO® Shop DK.webloc  Burgervogn 60404 | City | Officiel LEGO® Shop DK.webloc  City-tårnet 60473 | City | Officiel LEGO® Shop DK.webloc  Donutvogn 60452 | City | Officiel LEGO® Shop DK.webloc  Eksprestog 60337 | City | Officiel LEGO® Shop DK.webloc  F1® Williams Racing og Haas F1®-racerbiler 60464 | City | Officiel LEGO® Shop DK.webloc  (+50 more)
